* Tue Jun 27 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Merge delegation services back into core.
- Add OCSP options
* Thu Jun 22 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Lots of additions to SiteCast/SlashGrid, including
  /grid/local/ filesystem with DNs from gridmapdir
- GridSiteCastAlias now allows any URL scheme (gsiftp,
  xrootd, ...) not just HTTP(S).
- Replace static gridsite.spec with make-gridsite-spec
* Fri Jun  9 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Add patch from Jan Pospisil <honik@kma.zcu.cz> to
  Makefile, to allow standalone building of libraries.
- Include code for June 2006 version of delegation
  protocol (ie userproxy.pem rather than usercert.pem
  and userkey.pem)
* Thu Jun  8 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- SiteCast support in SlashGrid
* Mon Jun  5 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.3.1 ====
* Sun May 26 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Include SlashGrid code, and in gridsite.spec etc
- Add sample fuse.spec to docs for use with SlashGrid
* Fri May 26 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.3.0 ====
* Mon Apr 24 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Reworked SSL session caching: passcodes directory now
  because /var/www/sessions by default, and also used
  to cache credentials according to SSL Session ID.
* Mon Apr 10 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Patch from Alberto di Meglio <alberto.di.meglio@cern.ch>
  to allow use of relocated httpd include files.
* Mon Apr  3 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Use dist for building tar balls
* Mon Apr  3 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.19 ====
* Fri Mar 31 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Final tidy up for gLite 3.1
* Fri Mar 31 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.18 ====
* Wed Mar 29 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- New proxy destroy and time functions. 