@@ -1,4 +1,4 @@
 MAJOR_VERSION=1
 MINOR_VERSION=1.3
-PATCH_VERSION=1.3.1
+PATCH_VERSION=1.3.2
 VERSION=$(PATCH_VERSION)
