@@ -1,2 +1,2 @@
-module.version=1.3.1
+module.version=1.3.2
 module.age=1
